Fixed button margin when wrapped

--- a/ui/src/app/dashboard/dashboard.component.css
+++ b/ui/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,8 @@
-.heroes-menu > button {
+.heroes-menu {
+  margin-bottom: -0.5rem;
+}
+
+.heroes-menu>button {
   margin-inline: 0.5rem;
+  margin-bottom: 0.5rem
 }
